CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(emu)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wextra -Wall")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(include/)

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)

ADD_EXECUTABLE(emu ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(emu)
